# duckie-wallpaper

./: CMakeLists.txt  README.md  livewallpaper.spec
cmake/: CMakeLists.txt  FindLiveWallpaper.cmake  FindVala.cmake  LiveWallpaperCommon.cmake  LiveWallpaperPlugin.cmake  ValaPrecompile.cmake
data/: CMakeLists.txt  livewallpaper-autostart.desktop.in  livewallpaper-config.appdata.xml.in  livewallpaper-config.desktop.in  livewallpaper-indicator.desktop.in  livewallpaper.desktop.in  livewallpaper.pc.in  livewallpaper.plugin.in  livewallpaper.xml
debian/: CMakeLists.txt  changelog  control  copyright  livewallpaper-config.install  livewallpaper-dev.install  livewallpaper-dev.install.in  livewallpaper-indicator.install  livewallpaper.install  rules
doc/: CMakeLists.txt  gtkdoc-scangobj.cmake.in  livewallpaper-core-docs.xml.in  livewallpaper-core-sections.txt  tut_livewallpaper_plugin.xml  tut_settings.xml
include/: CMakeLists.txt
include/livewallpaper/: background.h  buffer.h  cairo-texture.h  color.h  core.h  error.h  math.h  matrix.h  noise.h  output.h  program.h  random.h  range.h  shader.h  texture.h  util.h  wallpaper.h
livewallpaper-core/: CMakeLists.txt  background.c  buffer.c  cairo-texture.c  color.c  error.c  matrix.c  noise.c  output.c  program.c  range.c  shader.c  sine-table.c  texture.c  util.c  wallpaper.c
plugins/: CMakeLists.txt
plugins/circles/: CMakeLists.txt  circles.plugin  circles.py  circles.xml.in
plugins/duckiegalaxy/: CMakeLists.txt  duckiegalaxy.gresource.xml  duckiegalaxy.plugin  duckiegalaxy.xml
plugins/duckiegalaxy/images/: galaxy-light.xcf
plugins/duckiegalaxy/shader/: vert.glsl
plugins/duckiegalaxy/src/: duckiegalaxy.c  duckiegalaxy.h  light.c  light.h  particle.c  particle.h
plugins/galaxy/: CMakeLists.txt  galaxy.gresource.xml  galaxy.plugin  galaxy.xml
plugins/galaxy/shader/: frag.glsl
plugins/galaxy/src/: galaxy.c  galaxy.h  light.c  light.h  particle.c  particle.h
plugins/gradclock/: CMakeLists.txt  gradclock.plugin  gradclock.xml
plugins/gradclock/src/: gradclock.c  gradclock.h  gradclock_drawer.c  gradclock_drawer.h
plugins/nexus/: CMakeLists.txt  nexus.gresource.xml  nexus.plugin  nexus.xml
plugins/nexus/images/: glow-concentric-cirles.xcf  glow-radial.xcf  glow-spiral.xcf  glow-square.xcf
plugins/nexus/src/: nexus.c  nexus.h  particle.c  particle.h
plugins/noise/: CMakeLists.txt  noise.gresource.xml  noise.plugin  noise.xml
plugins/noise/images/: background.xcf
plugins/noise/shader/: frag.glsl  vert.glsl
plugins/noise/src/: noise.c  noise.h  particle.c  particle.h
plugins/photoslide/: CMakeLists.txt  photoslide.plugin  photoslide.py  photoslide.xml
po/: CMakeLists.txt  LINGUAS  POTFILES.in  de.po  es.po  fr.po  he.po  hr.po  it.po  ja.po  livewallpaper.pot  lt.po  lv.po  ms.po  nl.po  ru.po  sk.po  tr.po  translations.h  uk.po  update-po.sh  zh_CN.po
src/: CMakeLists.txt  application.c  application.h  clock.c  clock.h  command-line.c  command-line.h  config.h.in  fps-visualizer.c  fps-visualizer.h  main.c  opengl-window.c  opengl-window.h  plugins-engine.c  plugins-engine.h  power-manager.c  power-manager.h  window.c  window.h
tools/: CMakeLists.txt  lw-generate-schema  sine-table-generator.c
ui/: CMakeLists.txt  config.vala.in  lw-ui.vala  plugin.vala
ui/config/: CMakeLists.txt  application.vala  files-selector.vala  key.vala  keyfactory.vala  main.vala  plugin-parser.vala  plugin-store.vala  range-selector.vala  search-workaround.c  search.vala
ui/config/resources/: files-selector.ui  gresources.xml  livewallpaper-config.ui
ui/indicator/: CMakeLists.txt  main.vala
